--- a/_posts/2001-06-06-run.markdown
+++ b/_posts/2001-06-06-run.markdown
@@ -4,16 +4,7 @@ title: Run
 image: volcano.jpg
 wordpress_id: 1579
 wordpress_url: http://www.danallan.com/?p=1579
-categories:
-- title: High School
-  slug: hs
-  autoslug: high-school
-- title: The Attic
-  slug: attic
-  autoslug: the-attic
-- title: Photoshop Creations
-  slug: hs-photos
-  autoslug: photoshop-creations
+categories: the-attic high-school photoshop-creations
 tags: []
 ---
 [![](http://www.danallan.com/wp-content/uploads/2011/11/volcano.jpg "volcano")](http://www.danallan.com/wp-content/uploads/2011/11/volcano.jpg)
