--- a/_posts/2012-08-09-vacants.markdown
+++ b/_posts/2012-08-09-vacants.markdown
@@ -3,10 +3,7 @@ layout: post
 title: Vacants
 wordpress_id: 2030
 wordpress_url: http://www.danallan.com/?p=2030
-categories:
-- title: Notes &amp; Adventures
-  slug: notes
-  autoslug: notes-&amp;-adventures
+categories: notes
 tags:
 - title: Baltimore
   slug: baltimore
