--- a/_posts/2012-10-15-wet-bias.markdown
+++ b/_posts/2012-10-15-wet-bias.markdown
@@ -3,10 +3,7 @@ layout: post
 title: Wet Bias
 wordpress_id: 2496
 wordpress_url: http://www.danallan.com/?p=2496
-categories:
-- title: Notes &amp; Adventures
-  slug: notes
-  autoslug: notes-&amp;-adventures
+categories: notes
 tags: []
 ---
 
