--- a/_posts/2012-10-26-flex-mex.markdown
+++ b/_posts/2012-10-26-flex-mex.markdown
@@ -3,10 +3,7 @@ layout: post
 title: Flex Mex
 wordpress_id: 2546
 wordpress_url: http://www.danallan.com/?p=2546
-categories:
-- title: Notes &amp; Adventures
-  slug: notes
-  autoslug: notes-&amp;-adventures
+categories: notes
 tags: []
 ---
 
