--- a/_posts/2013-07-11-bears.markdown
+++ b/_posts/2013-07-11-bears.markdown
@@ -3,10 +3,7 @@ layout: post
 title: Bears!
 wordpress_id: 3019
 wordpress_url: http://www.danallan.com/?p=3019
-categories:
-- title: Notes &amp; Adventures
-  slug: notes
-  autoslug: notes-&amp;-adventures
+categories: notes
 tags: []
 ---
 
