--- a/_posts/2001-06-06-run.md
+++ b/_posts/2001-06-06-run.md
@@ -7,4 +7,4 @@ wordpress_url: http://www.danallan.com/?p=1579
 categories: the-attic high-school photoshop-creations
 tags: []
 ---
-[![](http://www.danallan.com/wp-content/uploads/2011/11/volcano.jpg "volcano")](http://www.danallan.com/wp-content/uploads/2011/11/volcano.jpg)
+![Run!]({% asset_path volcano.jpg %})
