MathJax works, but not all posts are fixed.

--- a/_posts/2013-07-11-bears.md
+++ b/_posts/2013-07-11-bears.md
@@ -9,4 +9,4 @@ tags: []
 
 Keep an eye on this [live video stream](http://explore.org/#!/live-cams/player/brown-bear-salmon-cam-brooks-falls "link") of bears romping around and catching salmon in an Alaskan stream. Endlessly entertaining.
 
-H/T Nik Hartman
+H/T [Nik Hartman](https://twitter.com/nikhartman)
