Added general oembed, and specific youtube and vimeo plugin.

--- a/_posts/2012-10-26-flex-mex.md
+++ b/_posts/2012-10-26-flex-mex.md
@@ -6,8 +6,10 @@ wordpress_url: http://www.danallan.com/?p=2546
 categories: notes
 tags: []
 ---
+At the intersection of topology and food:
 
-Via my friend Seamus, at the intersection of topology and food:
-<iframe width="700" height="394" src="http://www.youtube.com/embed/GTwrVAbV56o" frameborder="0" allowfullscreen></iframe>
-It reminds of [mobius strip bagels](http://www.georgehart.com/bagel/bagel.html). Clever, but sloppy.
-[![](http://www.danallan.com/wp-content/uploads/2012/10/bagel0.jpg "bagel0")](http://www.danallan.com/wp-content/uploads/2012/10/bagel0.jpg)
+{% youtube GTwrVAbV56o %}
+
+It reminds of [mobius strip bagels](http://www.georgehart.com/bagel/bagel.html).
+
+![Clever, but messy.](http://www.danallan.com/wp-content/uploads/2012/10/bagel0.jpg)
