more 2012 edits, add youtube plugin

--- a/source/_posts/2012-10-26-flex-mex.md
+++ b/source/_posts/2012-10-26-flex-mex.md
@@ -8,7 +8,7 @@ tags: []
 ---
 At the intersection of topology and food:
 
-{% video http://youtube.com/watch?v=GTwrVAbV56o %}
+{% youtube GTwrVAbV56o %}
 
 It reminds of [mobius strip bagels](http://www.georgehart.com/bagel/bagel.html).
 
