--- a/source/_posts/2010-10-27-tug-of-war.md
+++ b/source/_posts/2010-10-27-tug-of-war.md
@@ -19,7 +19,10 @@ tags:
   slug: physics
   autoslug: physics
 ---
-![](http://www.danallan.com/wp-content/uploads/2010/10/DSC0040-570x378.jpg "Explaining the finale: tug-of-war with pulleys.")
+![]({% asset_path DSC0040-570x378.jpg %})
+
 Physics students work through a lot of homework problems involving compound pulleys, but I don't think most people ever get hands-on experience with one. For the latest round of visits to Baltimore Talent Development High School, Nuala and I built something to give students a memorable appreciation for mechanical advantage. Using one strong rope, five pulleys, and two wooden bars, this contraption gives one side a 5 to 1 advantage over the other. One girl easily dragged five bodily struggling high school boys across the room.
-![](http://www.danallan.com/wp-content/uploads/2010/10/DSC0044-570x378.jpg ""Don't let her pull you forward, guys."")
+
+![]({% asset_path DSC0044-570x378.jpg %})
+
 Props to these guys for really throwing their weight into it, but they were no match. If you try this: Make sure you shell out for thick rope, solid pulleys, and rods that won't snap. I attached the pulleys to the bar using carabiners held in place by wood screws.
