--- a/source/_posts/_hearing-hydrogen.ipynb
+++ b/source/_posts/_hearing-hydrogen.ipynb
@@ -15,7 +15,7 @@
       "\n",
       "![Spectral Lines of Hydrogen](http://upload.wikimedia.org/wikipedia/commons/4/41/Hydrogen_spectrum.svg)\n",
       "\n",
-      "The wavelengths $\\lambda$ given by the formula can be given as frequencies $\\displaystyle f = \\frac{c}{\\lambda} = R\\left(\\frac{1}{n_1^2} - \\frac{1}{n_2^2}\\right)$ which can be rescaled into *musical* frequencies, which we will play. This has been [done before](http://nbviewer.ipython.org/github/Carreau/posts/blob/master/07-the-sound-of-hydrogen.ipynb), but I will present it differently. H/T to the original authors for this neat idea."
+      "The wavelengths $\\lambda$ given by the formula can be given as frequencies $\\displaystyle f = \\frac{c}{\\lambda} = R\\left(\\frac{1}{n_1^2} - \\frac{1}{n_2^2}\\right)$ which can be rescaled into *musical* frequencies, which we will play. This has been [done before](http://nbviewer.ipython.org/github/Carreau/posts/blob/master/07-the-sound-of-hydrogen.ipynb), but I will give more attention to the science and musical perception and less attention to the programming."
      ]
     },
     {
