enable/disable comments appropriately

--- a/source/_posts/2012-10-15-wet-bias.md
+++ b/source/_posts/2012-10-15-wet-bias.md
@@ -4,6 +4,7 @@ title: Wet Bias
 wordpress_id: 2496
 wordpress_url: http://www.danallan.com/?p=2496
 categories: notes
+comments: true
 tags: []
 ---
 Do weather forecasts exaggerate the chance of rain? A chapter in Nate Silver's [book](http://www.amazon.com/The-Signal-Noise-Predictions-Fail-but/dp/159420411X) on prediction considers weather forecasts and the incentives of the forecasters.
