--- a/source/_posts/2012-10-26-flex-mex.md
+++ b/source/_posts/2012-10-26-flex-mex.md
@@ -4,6 +4,7 @@ title: Flex Mex
 wordpress_id: 2546
 wordpress_url: http://www.danallan.com/?p=2546
 categories: notes
+comments: true
 tags: []
 ---
 At the intersection of topology and food:
