--- a/source/_posts/2010-10-27-tug-of-war.md
+++ b/source/_posts/2010-10-27-tug-of-war.md
@@ -5,6 +5,7 @@ image: DSC0044.jpg
 wordpress_id: 1189
 wordpress_url: http://www.danallan.com/?p=1189
 categories: projects science-demos
+comments: true
 tags:
 - title: Baltimore Talent Development High School
   slug: baltimore-talent-development-high-school
