--- a/source/_posts/2012-08-09-vacants.md
+++ b/source/_posts/2012-08-09-vacants.md
@@ -4,6 +4,7 @@ title: Vacants
 wordpress_id: 2030
 wordpress_url: http://www.danallan.com/?p=2030
 categories: notes
+comments: true
 tags:
 - title: Baltimore
   slug: baltimore
