--- a/source/_posts/2012-10-08-tourist.md
+++ b/source/_posts/2012-10-08-tourist.md
@@ -4,6 +4,7 @@ title: Tourist
 wordpress_id: 2393
 wordpress_url: http://www.danallan.com/?p=2393
 categories: notes
+comments: true
 tags: []
 ---
 A footnote in the titular essay from _Consider the Lobster_ by David Foster Wallace:
